[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyReadable_keenu"
version = "0.0.1"
authors = [
  { name="Paramut Suwannabut", email="keenusuwannabut@gmail.com" },
]
description = "Readable data format focusing on English and Thai languages"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xullul/PyReadable"
"Bug Tracker" = "https://github.com/xullul/PyReadable/issues"